--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>  
     
     <!-- BUTTONS -->
-    <div class= "buttons">  
+    <div class= "buttons">
+      <input type="submit" value="Google Search" id="google_search">  
       <input type="submit" value="I'm Feeling Lucky" id="im_feeling_lucky">
     </div>
       
